--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <script type="module" crossorigin src="/assets/index.b7103f69.js"></script>
-    <link rel="stylesheet" href="/assets/index.87eadfc7.css">
+    <script type="module" crossorigin src="/TodoList/assets/index.b7103f69.js"></script>
+    <link rel="stylesheet" href="/TodoList/assets/index.87eadfc7.css">
   </head>
   <body>
     <div id="app"></div>
